rename entry point to project name

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <canvas id="canvas">To see this app, please use a modern browser.</canvas>
-    <script src="../scripts/index.ts"></script>
+    <script src="../scripts/Ecmastris.ts"></script>
   </body>
 </html>
