upgrade project to parcel2

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <canvas id="canvas">To see this app, please use a modern browser.</canvas>
-    <script src="../scripts/Ecmastris.ts"></script>
+    <script type="module" src="../scripts/Ecmastris.ts"></script>
   </body>
 </html>
